Fix environment variable load error

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,16 +1,6 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: postgresql
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
-
 development:
-  <<: *default
+  host: localhost
+  adapter: postgresql
   database: <%= ENV['database'] %>
   password: <%= ENV['password'] %>
   username: <%= ENV['username'] %>
@@ -19,12 +9,9 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
   host: localhost
+  adapter: postgresql
   database: <%= ENV['database'] %>
   password: <%= ENV['password'] %>
   username: <%= ENV['username'] %>
 
-# production:
-#   <<: *default
-#   database: db/production.sqlite3
