--- a/lib/competitions/data/constraints.yml
+++ b/lib/competitions/data/constraints.yml
@@ -1,20 +1,20 @@
 min_value:
-  field_type: 'integer'
+  type: 'IntegerConstraint'
   name: 'Minimum Value'
-  value_type: 'integer'
+  value_type: 'Integer'
   default: '0'
 max_value:
-  field_type: 'integer'
+  type: 'IntegerConstraint'
   name: 'Maximum Value'
-  value_type: 'integer'
+  value_type: 'Integer'
   default: nil
 min_length:
-  field_type: 'string'
+  type: 'StringConstraint'
   name: 'Minimum Length'
-  value_type: 'integer'
+  value_type: 'Integer'
   default: 0
 max_length:
-  field_type: 'string'
+  type: 'StringConstraint'
   name: 'Maximum Length'
-  value_type: 'integer'
+  value_type: 'Integer'
   default: 255
