--- a/lib/competitions/data/grants.yml
+++ b/lib/competitions/data/grants.yml
@@ -1,4 +1,18 @@
 grant1:
   organization_id: 1
+  user_id: 1
   name: 'Model NIH Grant'
   short_name: 'model'
+  state: 'complete'
+  initiation_date: '2020-03-01 06:00:00'
+  submission_open_date: '2020-03-02 06:00:00'
+  submission_close_date: '2020-03-16 06:00:00'
+  rfa: 'Lorem Ipsum dolor sit'
+  min_budget: 0
+  max_budget: 1000
+  applications_per_user: 1
+  review_guidance: 'Consectetur adipiscing elit, sed do eiusmod tempor'
+  max_reviewers_per_proposal: 1
+  max_proposals_per_reviewer: 2
+  panel_date: '2020-04-01 06:00:00'
+  panel_location: '123 Main - Room 100'
