--- a/lib/competitions/data/constraint_questions.yml
+++ b/lib/competitions/data/constraint_questions.yml
@@ -1,32 +1,32 @@
 default_string_constraint_field1:
-  field_id: 1
+  question_id: 1
   constraint_id: 3
   value: nil
 default_string_constraint_field2:
-  field_id: 1
+  question_id: 1
   constraint_id: 4
   value: nil
 set_string_constraint_field1:
-  field_id: 2
+  question_id: 2
   constraint_id: 3
   value: 10
 set_string_constraint_field2:
-  field_id: 2
+  question_id: 2
   constraint_id: 4
   value: 10
 default_int_constraint_field1:
-  field_id: 3
+  question_id: 3
   constraint_id: 1
   value: nil
 default_int_constraint_field2:
-  field_id: 3
+  question_id: 3
   constraint_id: 2
   value: nil
 set_int_constraint_field1:
-  field_id: 4
+  question_id: 4
   constraint_id: 1
   value: 1
 set_int_constraint_field2:
-  field_id: 4
+  question_id: 4
   constraint_id: 2
   value: 5
