--- a/lib/competitions/data/users.yml
+++ b/lib/competitions/data/users.yml
@@ -4,21 +4,25 @@ user1:
   last_name: 'Doe'
   email: 'j-doe@northwestern.edu'
   organization_role: 'admin'
+  password: 'secret'
 user2:
   organization_id: 1
   first_name: 'Exene'
   last_name: 'Cervenka'
   email: 'e-cervenak@northwestern.edu'
   organization_role: 'editor'
+  password: 'secret'
 user3:
   organization_id: 1
   first_name: 'Billy'
   last_name: 'Zoom'
   email: 'b-zoom@northwestern.edu'
   organization_role: 'viewer'
+  password: 'secret'
 user4:
   organization_id: 1
   first_name: 'D.J.'
   last_name: 'Bonebrake'
   email: 'd-bonebrake@northwestern.edu'
   organization_role: 'user'
+  password: 'secret'
