--- a/lib/competitions/data/grants.yml
+++ b/lib/competitions/data/grants.yml
@@ -1,6 +1,5 @@
 grant1:
   organization_id: 1
-  user_id: 1
   name: 'Model NIH Grant'
   short_name: 'model'
   state: 'complete'
@@ -14,5 +13,7 @@ grant1:
   review_guidance: 'Consectetur adipiscing elit, sed do eiusmod tempor'
   max_reviewers_per_proposal: 1
   max_proposals_per_reviewer: 2
+  review_open_date: '2020-03-18 06:00:00'
+  review_close_date: '2020-03-25 06:00:00'
   panel_date: '2020-04-01 06:00:00'
   panel_location: '123 Main - Room 100'
