--- a/lib/competitions/data/users.yml
+++ b/lib/competitions/data/users.yml
@@ -25,6 +25,57 @@ user4:
   first_name: 'D.J.'
   last_name: 'Bonebrake'
   email: 'd-bonebrake@northwestern.edu'
-  organization_role: 'user'
+  organization_role: 'basic'
   password: 'secret'
   era_commons: 'DBonebr90069'
+user5:
+  organization_id: 2
+  first_name: 'Lou'
+  last_name: 'Reed'
+  email: 'l-reed@nm.org'
+  organization_role: 'admin'
+  password: 'secret'
+  era_commons: 'louRee10017'
+user6:
+  organization_id: 2
+  first_name: 'John'
+  last_name: 'Cale'
+  email: 'j-cale@nm.org'
+  organization_role: 'editor'
+  password: 'secret'
+  era_commons: 'JohnCa10017'
+user7:
+  organization_id: 2
+  first_name: 'Doug'
+  last_name: 'Yule'
+  email: 'd-yule@nm.org'
+  organization_role: 'viewer'
+  password: 'secret'
+user8:
+  organization_id: 2
+  first_name: 'Moe'
+  last_name: 'Tucker'
+  email: 'm-tucker@nm.org'
+  organization_role: 'basic'
+  password: 'secret'
+user9:
+  organization_id: 2
+  first_name: 'Sterling'
+  last_name: 'Morrison'
+  email: 's-morrison@nm.org'
+  organization_role: 'basic'
+  password: 'secret'
+
+
+
+
+
+
+
+
+
+
+
+
+
+
