--- a/lib/competitions/data/users.yml
+++ b/lib/competitions/data/users.yml
@@ -25,7 +25,7 @@ user4:
   first_name: 'D.J.'
   last_name: 'Bonebrake'
   email: 'd-bonebrake@northwestern.edu'
-  organization_role: 'basic'
+  organization_role: 'none'
   password: 'secret'
   era_commons: 'DBonebr90069'
 user5:
@@ -56,14 +56,14 @@ user8:
   first_name: 'Moe'
   last_name: 'Tucker'
   email: 'm-tucker@nm.org'
-  organization_role: 'basic'
+  organization_role: 'none'
   password: 'secret'
 user9:
   organization_id: 2
   first_name: 'Sterling'
   last_name: 'Morrison'
   email: 's-morrison@nm.org'
-  organization_role: 'basic'
+  organization_role: 'none'
   password: 'secret'
 
 
