--- a/lib/competitions/data/constraints.yml
+++ b/lib/competitions/data/constraints.yml
@@ -2,7 +2,7 @@ min_value:
   type: 'IntegerConstraint'
   name: 'Minimum Value'
   value_type: 'integer'
-  default: '0'
+  default: 0
 max_value:
   type: 'IntegerConstraint'
   name: 'Maximum Value'
