--- a/lib/competitions/data/default_sets.yml
+++ b/lib/competitions/data/default_sets.yml
@@ -3,20 +3,25 @@ nih_research:
   questions:
     abstract:
       grant_id: 1
-      answer_type: 'text'
+      answer_type: 'TextQuestion'
       name: 'Abstract'
       help_text: ''
       placeholder_text: 'Up to 1000 characters'
       required: true
       constraints:
+        min_length:
+          type: 'TextConstraint'
+          name: 'minimum_length'
+          value_type: 'integer'
+          value: 0
         max_length:
           type: 'TextConstraint'
-          name: 'Maximum Length'
+          name: 'maximum_length'
           value_type: 'integer'
           value: 1000
     budget:
       grant_id: 1
-      answer_type: 'integer'
+      answer_type: 'IntegerQuestion'
       name: 'Budget'
       help_text: ''
       placeholder_text: ''
@@ -24,12 +29,12 @@ nih_research:
       constraints:
         min_value:
           type: 'IntegerConstraint'
-          name: 'Minimum Value'
+          name: 'minimum_value'
           value_type: 'integer'
           value: 0
         max_value:
           type: 'IntegerConstraint'
-          name: 'Maximum Value'
+          name: 'maximum_value'
           value_type: 'integer'
           value: 1000
 kl2_mentored_career_development:
@@ -37,7 +42,7 @@ kl2_mentored_career_development:
   questions:
     direct_project_cost:
       grant_id: 2
-      answer_type: 'float'
+      answer_type: 'FloatQuestion'
       name: 'Direct Project Cost'
       help_text: 'Between $5000 and $50,000'
       placeholder_text: ''
@@ -45,11 +50,29 @@ kl2_mentored_career_development:
       constraints:
         min_value:
           type: 'IntegerConstraint'
-          name: 'Minimum Value'
+          name: 'minimum_value'
           value_type: 'integer'
           value: 5000
         max_value:
           type: 'IntegerConstraint'
-          name: 'Maximum Value'
+          name: 'maximum_value'
           value_type: 'integer'
           value: 50000
+    era_commons:
+      grant_id: 2
+      answer_type: 'StringQuestion'
+      name: 'Your eRA Commons Name'
+      help_text: ''
+      placeholder_text: ''
+      required: true
+      constraints:
+        min_length:
+          type: 'StringConstraint'
+          name: 'minimum_length'
+          value_type: 'integer'
+          value: 10
+        max_length:
+          type: 'StringConstraint'
+          name: 'maximum_length'
+          value_type: 'integer'
+          value: 100
