--- a/lib/competitions/data/grants.yml
+++ b/lib/competitions/data/grants.yml
@@ -17,6 +17,13 @@ grant1:
   review_close_date: '2020-03-25 06:00:00'
   panel_date: '2020-04-01 06:00:00'
   panel_location: '123 Main - Room 100'
+  grant_users:
+    role1:
+      user_id: 4
+      grant_role: 'admin'
+    role2:
+      user_id: 3
+      grant_role: 'viewer'
 grant2:
   organization_id: 2
   name: 'Sample NIH Rresearch Grant'
@@ -36,3 +43,10 @@ grant2:
   review_close_date: '2020-04-25 06:00:00'
   panel_date: '2020-05-01 06:00:00'
   panel_location: '123 Main - Room 100'
+  grant_users:
+    role1:
+      user_id: 6
+      grant_role: 'admin'
+    role2:
+      user_id: 8
+      grant_role: 'editor'
