Typos, update user seed, modularize setup.rb

--- a/lib/competitions/data/users.yml
+++ b/lib/competitions/data/users.yml
@@ -9,7 +9,7 @@ user2:
   organization_id: 1
   first_name: 'Exene'
   last_name: 'Cervenka'
-  email: 'e-cervenak@northwestern.edu'
+  email: 'e-cervenaka@northwestern.edu'
   organization_role: 'editor'
   password: 'secret'
   era_commons: 'ECervenk90069'
