--- a/lib/competitions/data/constraints.yml
+++ b/lib/competitions/data/constraints.yml
@@ -8,23 +8,23 @@ max_value:
   name: 'maximum_value'
   value_type: 'integer'
   default: nil
-string_min_length:
+string_min_number_of_characters:
   type: 'StringConstraint'
-  name: 'minimum_length'
+  name: 'minimum_number_of_characters'
   value_type: 'integer'
   default: 0
-string_max_length:
+string_max_number_of_characters:
   type: 'StringConstraint'
-  name: 'maximum_length'
+  name: 'maximum_number_of_characters'
   value_type: 'integer'
   default: 255
-text_min_length:
+text_min_number_of_characters:
   type: 'TextConstraint'
-  name: 'minimum_length'
+  name: 'minimum_number_of_characters'
   value_type: 'integer'
   default: 0
-text_max_length:
+text_max_number_of_characters:
   type: 'TextConstraint'
-  name: 'maximum_length'
+  name: 'maximum_number_of_characters'
   value_type: 'integer'
   default:
