--- a/lib/competitions/data/grants.yml
+++ b/lib/competitions/data/grants.yml
@@ -123,7 +123,7 @@ research2:
   organization_id: 2
   name: 'Sample NIH Rresearch Grant'
   short_name: 'sample'
-  state: 'complete'
+  state: 'completed'
   publish_date: '2020-04-01 06:00:00'
   submission_open_date: '2020-04-02 06:00:00'
   submission_close_date: '2020-04-16 06:00:00'
