--- a/lib/competitions/data/submissions.yml
+++ b/lib/competitions/data/submissions.yml
@@ -1,10 +1,10 @@
 submission1:
   grant_id: 1
   user_id: 2
-  project_title: 'Complete Model Submission to NIH Research Grant'
-  state: 'complete'
+  project_title: 'Submitted Model Submission to NIH Research Grant'
+  state: 'submitted'
 submission2:
-  grant_id: 1
+  grant_id: 2
   user_id: 3
   project_title: 'Draft Model Submission to NIH Research Grant'
   state: 'draft'
