Add friendly_id gem. #56

--- a/lib/competitions/data/organizations.yml
+++ b/lib/competitions/data/organizations.yml
@@ -1,8 +1,8 @@
 organization1:
   name: 'Northwestern University'
-  short_name: 'NU'
+  slug: 'NU'
   url: 'http://www.northwestern.edu'
 organization2:
   name: 'Northwestern Medicine'
-  short_name: 'NM'
+  slug: 'NM'
   url: 'http://www.nm.org'
