--- a/lib/competitions/data/grants.yml
+++ b/lib/competitions/data/grants.yml
@@ -2,7 +2,7 @@ research:
   default_set: 1
   organization_id: 1
   name: 'Model NIH Research Grant'
-  short_name: 'model-nih'
+  slug: 'model-nih'
   state: 'demo'
   publish_date: '2020-03-01 06:00:00'
   submission_open_date: '2020-03-02 06:00:00'
@@ -62,7 +62,7 @@ kl2:
   default_set: 2
   organization_id: 1
   name: 'Model KL2 Grant'
-  short_name: 'model-kl2'
+  slug: 'model-kl2'
   state: 'demo'
   publish_date: '2020-03-01 06:00:00'
   submission_open_date: '2020-03-02 06:00:00'
@@ -122,7 +122,7 @@ research2:
   default_set: 1
   organization_id: 2
   name: 'Sample NIH Rresearch Grant'
-  short_name: 'sample'
+  slug: 'sample'
   state: 'completed'
   publish_date: '2020-04-01 06:00:00'
   submission_open_date: '2020-04-02 06:00:00'
