WIP: Change the attribute-map.yml. #93 #99

--- a/config/attribute-map.yml
+++ b/config/attribute-map.yml
@@ -1,3 +1,4 @@
-<%= Rails.application.credentials.staging[:attribute_map_email] %>
-<%= Rails.application.credentials.staging[:attribute_map_last_name] %>
-<%= Rails.application.credentials.staging[:attribute_map_first_name] %>
+# attribute-map.yml
+<%= Rails.application.credentials.staging[:attribute_map_email] %>: "email"
+<%= Rails.application.credentials.staging[:attribute_map_last_name] %>: "last_name"
+<%= Rails.application.credentials.staging[:attribute_map_first_name] %>: "first_name"
