--- a/config/attribute-map.yml
+++ b/config/attribute-map.yml
@@ -1,4 +1,4 @@
 # attribute-map.yml
-"http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress": "email"
-"http://schemas.xmlsoap.org/ws/2005/05/identity/claims/surname": "last_name"
-"http://schemas.xmlsoap.org/ws/2005/05/identity/claims/givenname": "first_name"
+"urn:mace:dir:attribute-def:emailaddress": "email"
+"urn:mace:dir:attribute-def:surname": "last_name"
+"urn:mace:dir:attribute-def:givenname": "first_name"
