--- a/config/attribute-map.yml
+++ b/config/attribute-map.yml
@@ -1,11 +1,5 @@
 # attribute-map.yml
 
-# development
-"urn:mace:dir:attribute-def:email": "email"
-"urn:mace:dir:attribute-def:firstName": "first_name"
-"urn:mace:dir:attribute-def:lastName": "last_name"
-
-# staging
-# "urn:mace:dir:attribute-def:emailaddress": "email"
-# "urn:mace:dir:attribute-def:surname": "last_name"
-# "urn:mace:dir:attribute-def:givenname": "first_name"
+<%= Rails.application.credentials.dig(Rails.env.to_sym, una_attribute_email) %>: "email"
+<%= Rails.application.credentials.dig(Rails.env.to_sym, una_attribute_first_name) %>: "first_name"
+<%= Rails.application.credentials.dig(Rails.env.to_sym, una_attribute_last_name) %>: "last_name"
