--- a/config/attribute-map.yml
+++ b/config/attribute-map.yml
@@ -1,5 +1,5 @@
 # attribute-map.yml
 
-<%= Rails.application.credentials.dig(Rails.env.to_sym, una_attribute_email) %>: "email"
-<%= Rails.application.credentials.dig(Rails.env.to_sym, una_attribute_first_name) %>: "first_name"
-<%= Rails.application.credentials.dig(Rails.env.to_sym, una_attribute_last_name) %>: "last_name"
+<%= Rails.application.credentials.dig(Rails.env.to_sym, :una_attribute_email) %>: "email"
+<%= Rails.application.credentials.dig(Rails.env.to_sym, :una_attribute_first_name) %>: "first_name"
+<%= Rails.application.credentials.dig(Rails.env.to_sym, :una_attribute_last_name) %>: "last_name"
