WIP: Add system_admin and grant_creator, update seeds & policies, fix specs

--- a/lib/competitions/data/users.yml
+++ b/lib/competitions/data/users.yml
@@ -2,60 +2,69 @@ user1:
   first_name: 'John'
   last_name: 'Doe'
   email: 'j-doe@northwestern.edu'
-  organization_role: 'admin'
+  system_admin: true
   password: 'secret'
+  grant_creator: false
 user2:
   first_name: 'Exene'
   last_name: 'Cervenka'
   email: 'e-cervenaka@northwestern.edu'
-  organization_role: 'none'
+  system_admin: false
   password: 'secret'
+  grant_creator: false
   era_commons: 'ECervenk90069'
 user3:
   first_name: 'Billy'
   last_name: 'Zoom'
   email: 'b-zoom@northwestern.edu'
-  organization_role: 'none'
+  system_admin: false
   password: 'secret'
+  grant_creator: false
 user4:
   first_name: 'D.J.'
   last_name: 'Bonebrake'
   email: 'd-bonebrake@northwestern.edu'
-  organization_role: 'none'
+  system_admin: false
   password: 'secret'
+  grant_creator: false
   era_commons: 'DBonebr90069'
 user5:
   first_name: 'Lou'
   last_name: 'Reed'
   email: 'l-reed@nm.org'
-  organization_role: 'admin'
+  system_admin: true
   password: 'secret'
+  grant_creator: false
   era_commons: 'louRee10017'
 user6:
   first_name: 'John'
   last_name: 'Cale'
   email: 'j-cale@nm.org'
-  organization_role: 'admin'
+  system_admin: true
   password: 'secret'
+  grant_creator: true
   era_commons: 'JohnCa10017'
 user7:
   first_name: 'Doug'
   last_name: 'Yule'
   email: 'd-yule@nm.org'
-  organization_role: 'none'
+  system_admin: false
   password: 'secret'
+  grant_creator: false
 user8:
   first_name: 'Moe'
   last_name: 'Tucker'
   email: 'm-tucker@nm.org'
-  organization_role: 'none'
+  system_admin: false
   password: 'secret'
+  grant_creator: false
 user9:
   first_name: 'Sterling'
   last_name: 'Morrison'
   email: 's-morrison@nm.org'
-  organization_role: 'none'
+  system_admin: false
   password: 'secret'
+  grant_creator: false
 
 
 
