--- a/lib/competitions/data/users.yml
+++ b/lib/competitions/data/users.yml
@@ -1,81 +1,68 @@
 user1:
   first_name: 'John'
   last_name: 'Doe'
-  email: 'j-doe@northwestern.edu'
+  email: 'j-doe@x.edu'
+  upn: 'jd1@x.edu'
   system_admin: true
-  password: 'secret'
   grant_creator: false
 user2:
   first_name: 'Exene'
   last_name: 'Cervenka'
-  email: 'e-cervenaka@northwestern.edu'
+  email: 'e-cervenaka@x.edu'
+  upn: 'ec1@x.edu'
   system_admin: false
-  password: 'secret'
   grant_creator: false
   era_commons: 'ECervenk90069'
+  upn: 'ec1@x.edu'
 user3:
   first_name: 'Billy'
   last_name: 'Zoom'
-  email: 'b-zoom@northwestern.edu'
+  email: 'b-zoom@x.edu'
+  upn: 'bz1@x.edu'
   system_admin: false
-  password: 'secret'
   grant_creator: false
 user4:
   first_name: 'D.J.'
   last_name: 'Bonebrake'
-  email: 'd-bonebrake@northwestern.edu'
+  email: 'd-bonebrake@x.edu'
+  upn: db1@x.edu
   system_admin: false
-  password: 'secret'
   grant_creator: false
   era_commons: 'DBonebr90069'
 user5:
   first_name: 'Lou'
   last_name: 'Reed'
-  email: 'l-reed@nm.org'
+  email: 'l-reed@vu.org'
+  upn: 'lr1@vu.org'
   system_admin: true
-  password: 'secret'
   grant_creator: false
   era_commons: 'louRee10017'
 user6:
   first_name: 'John'
   last_name: 'Cale'
-  email: 'j-cale@nm.org'
+  email: 'j-cale@vu.org'
+  upn: jc1@vu.org
   system_admin: true
-  password: 'secret'
   grant_creator: true
   era_commons: 'JohnCa10017'
 user7:
   first_name: 'Doug'
   last_name: 'Yule'
-  email: 'd-yule@nm.org'
+  email: 'd-yule@vu.org'
+  upn: 'dy1@vu.org'
   system_admin: false
-  password: 'secret'
   grant_creator: false
 user8:
   first_name: 'Moe'
   last_name: 'Tucker'
-  email: 'm-tucker@nm.org'
+  email: 'm-tucker@vu.org'
+  upn: 'mt1@vu.org'
   system_admin: false
-  password: 'secret'
   grant_creator: false
 user9:
   first_name: 'Sterling'
   last_name: 'Morrison'
-  email: 's-morrison@nm.org'
+  email: 's-morrison@vu.org'
+  upn: 'sm1@vu.org'
   system_admin: false
-  password: 'secret'
   grant_creator: false
-
-
-
-
-
-
-
-
-
-
-
-
-
-
