--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,10 +9,10 @@ local:
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 amazon:
   service: S3
-  access_key_id: <%= Rails.application.credentials.staging[:aws_access_key_id] %>
-  secret_access_key: <%= Rails.application.credentials.staging[:aws_secret_access_key] %>
-  region: <%= Rails.application.credentials.staging[:aws_region] %>
-  bucket: <%= Rails.application.credentials.staging[:aws_bucket] %>
+  access_key_id: <%= Rails.application.credentials.dig(Rails.env.to_sym, :aws_access_key_id) %>
+  secret_access_key: <%= Rails.application.credentials.dig(Rails.env.to_sym, :aws_secret_access_key) %>
+  region: <%= Rails.application.credentials.dig(Rails.env.to_sym, :aws_region) %>
+  bucket: <%= Rails.application.credentials.dig(Rails.env.to_sym, :aws_bucket) %>
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
