WIP: Change db to alpha. #171

--- a/config/database.yml
+++ b/config/database.yml
@@ -5,11 +5,11 @@ development:
   username: <%= Rails.application.credentials.development[:username] %>
   password: <%= Rails.application.credentials.development[:password] %>
 alpha:
-  host:     <%= Rails.application.credentials.fsm[:host] %>
-  adapter:  <%= Rails.application.credentials.fsm[:adapter] %>
-  database: <%= Rails.application.credentials.fsm[:database] %>
-  username: <%= Rails.application.credentials.fsm[:username] %>
-  password: <%= Rails.application.credentials.fsm[:password] %>
+  host:     <%= Rails.application.credentials.alpha[:host] %>
+  adapter:  <%= Rails.application.credentials.alpha[:adapter] %>
+  database: <%= Rails.application.credentials.alpha[:database] %>
+  username: <%= Rails.application.credentials.alpha[:username] %>
+  password: <%= Rails.application.credentials.alpha[:password] %>
 staging:
   host:     <%= Rails.application.credentials.staging[:host] %>
   adapter:  <%= Rails.application.credentials.staging[:adapter] %>
