Again on db. #191

--- a/config/database.yml
+++ b/config/database.yml
@@ -16,3 +16,9 @@ staging:
   database: <%= Rails.application.credentials.staging[:database] %>
   username: <%= Rails.application.credentials.staging[:username] %>
   password: <%= Rails.application.credentials.staging[:password] %>
+test: &TEST
+  host:     <%= Rails.application.credentials.test[:host] %>
+  adapter:  <%= Rails.application.credentials.test[:adapter] %>
+  database: <%= Rails.application.credentials.test[:database] %>
+  username: <%= Rails.application.credentials.test[:username] %>
+  password: <%= Rails.application.credentials.test[:password] %>
