--- a/config/database.yml
+++ b/config/database.yml
@@ -16,6 +16,12 @@ staging:
   database: <%= Rails.application.credentials.staging[:database] %>
   username: <%= Rails.application.credentials.staging[:username] %>
   password: <%= Rails.application.credentials.staging[:password] %>
+production:
+  host:     <%= Rails.application.credentials.production[:host] %>
+  adapter:  <%= Rails.application.credentials.production[:adapter] %>
+  database: <%= Rails.application.credentials.production[:database] %>
+  username: <%= Rails.application.credentials.production[:username] %>
+  password: <%= Rails.application.credentials.production[:password] %>
 test: &TEST
   host:     <%= Rails.application.credentials.test[:host] %>
   adapter:  <%= Rails.application.credentials.test[:adapter] %>
