First changes to create config file. #434

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@
 
 # Ignore configuration yml files
 /config/attribute-map.yml
+/config/competitions_config.yml
 /config/deploy_config.yml
 
 # Rspec
