--- a/config/database.yml
+++ b/config/database.yml
@@ -1,30 +1,16 @@
-development:
-  host:     <%= Rails.application.credentials.development[:host] %>
-  adapter:  <%= Rails.application.credentials.development[:adapter] %>
-  database: <%= Rails.application.credentials.development[:database] %>
-  username: <%= Rails.application.credentials.development[:username] %>
-  password: <%= Rails.application.credentials.development[:password] %>
-alpha:
-  host:     <%= Rails.application.credentials.alpha[:host] %>
-  adapter:  <%= Rails.application.credentials.alpha[:adapter] %>
-  database: <%= Rails.application.credentials.alpha[:database] %>
-  username: <%= Rails.application.credentials.alpha[:username] %>
-  password: <%= Rails.application.credentials.alpha[:password] %>
-staging:
-  host:     <%= Rails.application.credentials.staging[:host] %>
-  adapter:  <%= Rails.application.credentials.staging[:adapter] %>
-  database: <%= Rails.application.credentials.staging[:database] %>
-  username: <%= Rails.application.credentials.staging[:username] %>
-  password: <%= Rails.application.credentials.staging[:password] %>
-production:
-  host:     <%= Rails.application.credentials.production[:host] %>
-  adapter:  <%= Rails.application.credentials.production[:adapter] %>
-  database: <%= Rails.application.credentials.production[:database] %>
-  username: <%= Rails.application.credentials.production[:username] %>
-  password: <%= Rails.application.credentials.production[:password] %>
+default: &default
+  host:     <%= COMPETITIONS_CONFIG[:database][:host] %>
+  adapter:  <%= COMPETITIONS_CONFIG[:database][:adapter] %>
+  database: <%= COMPETITIONS_CONFIG[:database][:database] %>
+  username: <%= COMPETITIONS_CONFIG[:database][:username] %>
+  password: <%= Rails.application.credentials.dig(Rails.env.to_sym, :password) %>
 test: &TEST
-  host:     <%= Rails.application.credentials.test[:host] %>
-  adapter:  <%= Rails.application.credentials.test[:adapter] %>
-  database: <%= Rails.application.credentials.test[:database] %>
-  username: <%= Rails.application.credentials.test[:username] %>
-  password: <%= Rails.application.credentials.test[:password] %>
+  <<: *default
+development:
+  <<: *default
+alpha:
+  <<: *default
+staging:
+  <<: *default
+production:
+  <<: *default
