--- a/config/storage.yml
+++ b/config/storage.yml
@@ -1,10 +1,10 @@
 test:
   service: Disk
-  root: <%= COMPETITIONS_CONFIG[:storage][:local][:root] %>
+  root: <%= Rails.root.join("tmp/storage") %>
 
 local:
   service: Disk
-  root: <%= COMPETITIONS_CONFIG[:storage][:local][:root] %>
+  root: <%= Rails.root.join("storage") %>
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 amazon:
