--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,8 +11,8 @@ amazon:
   service: S3
   access_key_id: <%= Rails.application.credentials.dig(Rails.env.to_sym, :aws_access_key_id) %>
   secret_access_key: <%= Rails.application.credentials.dig(Rails.env.to_sym, :aws_secret_access_key) %>
-  region: <%= Rails.application.credentials.dig(Rails.env.to_sym, :aws_region) %>
-  bucket: <%= Rails.application.credentials.dig(Rails.env.to_sym, :aws_bucket) %>
+  region: <%= COMPETITIONS_CONFIG[:storage][:aws][:region] %>
+  bucket: <%= COMPETITIONS_CONFIG[:storage][:aws][:bucket] %>
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
