Created storage.yml example. #491

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@
 /config/attribute-map.yml
 /config/competitions_config.yml
 /config/deploy_config.yml
+/config/storage.yml
 
 # Rspec
 /spec/examples.txt
